fix: :bug: Fixing all errors relationed with JWT
When i tried to test the enpoints, i realized that may essencial things were missing , so i added the files that were required, then, i test again and worked until token, need to try refresh token

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "ConnextSqlServer" : "Data Source=localhost \\sqlExpress; Initial Catalog =dB; Integrate Segurity = True",
     "ConexMySql" : "server=localhost;user=root;password=123456;database=WebGlossary"
+  },
+  "JWT": {
+    "Key": "~@3WvT%!(Tye#r$RTu&*54#@![*&*<?RTa&",
+    "Issuer": "MyProyectApi",
+    "Audience": "MyProyectApiUser",
+    "DurationInMinutes":  3
   }
 }
