--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "ConexSqlServer" : "Data Source = localhost\\ sqlExpress; Initial Catalog=Db; Integrate Segurity = True ",
     "ConexMySql" : "server=localhost; password=132456;user=root;database=WebGlossary"
+  },
+  "JWT": {
+    "Key": "~@3WvT%!(Tye#r$RTu&*54#@![*&*<?RTa&",
+    "Issuer": "MyProyectApi",
+    "Audience": "MyProyectApiUser",
+    "DurationInMinutes":  3
   }
 }
