feat: :construction: Learning how implement OpenAi in my project
I'm Implementing AI in my project, following the conventions like SOLID and accommodating the implementation to fit with my design patterns

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -15,5 +15,11 @@
     "Issuer": "MyProyectApi",
     "Audience": "MyProyectApiUser",
     "DurationInMinutes":  3
+  },
+  
+  "OpenAi" :{
+    "ApiUrl" : "https://api.openai.com/v1/engines/davinci/completions",
+    "ApiKey" : "Sin implementar"
   }
+
 }
