--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -15,5 +15,9 @@
     "Issuer": "MyProyectApi",
     "Audience": "MyProyectApiUser",
     "DurationInMinutes":  3
+  },
+  "OpenAi" :{
+    "ApiUrl" : "https://api.openai.com/v1/engines/davinci/completions",
+    "ApiKey" : "Sin implementar"
   }
 }
