feat: :construction: Enpoint Testing
I've been testing openAi enpoint, at the moment isn't working

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -18,6 +18,6 @@
   },
   "OpenAi" :{
     "ApiUrl" : "https://api.openai.com/v1/engines/davinci/completions",
-    "ApiKey" : "Sin implementar"
+    "ApiKey" : "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"
   }
 }
