--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -19,7 +19,7 @@
   
   "OpenAi" :{
     "ApiUrl" : "https://api.openai.com/v1/engines/davinci/completions",
-    "ApiKey" : "Sin implementar"
+    "ApiKey" : "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"
   }
 
 }
